# rustore_notify

./: Cargo.toml
src/: handlers.rs  main.rs
src/commands/: mod.rs
src/commands/callback/: mod.rs  search.rs
src/commands/text/: mod.rs  search.rs
src/helpers/: mod.rs
src/structs/: app_info.rs  mod.rs  search_result.rs
