[package]
name = "rustore_notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
ureq = { version = "2.5.0", features = ["json"]}
regex = "1.7"
reqwest = "0.11"