[package]
name = "rustore_notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
regex = "1.7"
reqwest = { version = "0.11", features = ["json"] }